@@ -24,33 +24,12 @@ import java.io.FileInputStream;
 import java.io.FileReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.io.Reader;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.Iterator;
-import java.util.List;
+import java.util.*;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.nutch.net.URLNormalizers;
-/**
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
 import org.apache.nutch.util.NutchConfiguration;
 
 import junit.framework.TestCase;
@@ -61,7 +40,7 @@ public class TestRegexURLNormalizer extends TestCase {
   
   private RegexURLNormalizer normalizer;
   private Configuration conf;
-  private HashMap testData = new HashMap();
+  private Map<String, NormalizedURL[]> testData = new HashMap<String, NormalizedURL[]>();
   
   // This system property is defined in ./src/plugin/build-plugin.xml
   private String sampleDir = System.getProperty("test.data", ".");
@@ -100,9 +79,9 @@ public class TestRegexURLNormalizer extends TestCase {
   }
 
   public void testNormalizerScope() throws Exception {
-    Iterator it = testData.keySet().iterator();
+    Iterator<String> it = testData.keySet().iterator();
     while (it.hasNext()) {
-      String scope = (String)it.next();
+      String scope = it.next();
       normalizeTest((NormalizedURL[])testData.get(scope), scope);
     }
   }
@@ -146,7 +125,7 @@ public class TestRegexURLNormalizer extends TestCase {
   private NormalizedURL[] readTestFile(String scope) throws IOException {
     File f = new File(sampleDir, "regex-normalize-" + scope + ".test");
     BufferedReader in = new BufferedReader(new InputStreamReader(new FileInputStream(f), "UTF-8"));
-    List list = new ArrayList();
+    List<NormalizedURL> list = new ArrayList<NormalizedURL>();
     String line;
     while((line = in.readLine()) != null) {
       if (  line.trim().length() == 0 ||
